tests/rosetta/out/Zig/associative-array-creation.error
zig build: exit status 1
/tmp/associative-array-creation.zig:21:37: error: expected type 'hash_map.HashMap([]const u8,i32,hash_map.StringContext,80)', found 'comptime_int'
/tmp/zig-0.12.0/lib/std/hash_map.zig:366:12: note: struct declared here
